--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,11 +1,13 @@
 
 
 
-<footer class="footer fixed-bottom">
-    <div class="container">
-        <span class="text-muted">Este es el footer de mi página</span>
-    </div>
-</footer>
+<div class="main-content d-flex flex-column">
+    <footer class="footer fixed-bottom">
+        <div class="container">
+            <span class="text-muted">Este es el footer de mi página</span>
+        </div>
+    </footer>
+</div>
 
 
 
