--- a/views/crear.hbs
+++ b/views/crear.hbs
@@ -1,21 +1,47 @@
 {{>header}}
 
 
-    <div class="container">
+    <div class="row d-flex justify-content-center align-items-center mt-5">
+        <div class="col-sm-6 mb-3 mb-sm-0 border border-dark-subtle">
+            <div class="card-body">
+                <h3 class="card-title text-center p-3 mb-2 bg-success-subtle text-emphasis-success">Cargar Producto</h3>
         <form action="/products/create" method="post">
+        <ul class="list-group list-group-flus">
+            <li class="list-group-item">
             <label for="name">Nombre</label>
             <input type="text" name="name" id="name">
+            </li>
+            <li class="list-group-item">
             <label for="marca">Marca</label>
             <input type="text" name="marca" id="marca">
+            </li>
+            <li class="list-group-item">
             <label for="price">Precio</label>
             <input type="text" name="price" id="price">
+            </li>
+            <li class="list-group-item">
             <label for="supplier">Proveedor</label>
             <input type="text" name="supplier" id="supplier">
-            <input type="submit">
+            </li>
+        </ul>
+            <div class="row mt-3">
+                <div class="col-md-6 d-flex justify-content-center align-items-center">
+                    <div>
+                        <button type="submit" value="Guardar" class="btn btn-primary">Guardar</button>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <a href="/products" class="btn btn-danger">Cancelar</a>
+                </div>
+            
+            </div>
+
+            
+            
         </form>
-    </div>
 
 
-
-
+</div>
+</div>
+</div>
 {{>footer}}
