--- a/views/home.hbs
+++ b/views/home.hbs
@@ -13,7 +13,10 @@
         <button type="submit" class="btn btn-primary">Ingresar</button>
         <a href="/register"><button type="button" class="btn btn-success">Registrar</button></a>
     </form>
+    <a href="/enviar" class="btn btn-success mt-5">Puedes enviarnos un mensaje</a>
 </div>
+
+
 
 
 {{>footer}}
