--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -21,6 +21,8 @@
     integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
     crossorigin="anonymous"></script>
 
+<!-- Production version -->
+<script src="https://unpkg.com/@popperjs/core@2"></script>
 </body>
 
 </html>
